Support Logic Delete